--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
-DB_CNN = mongodb+srv://mean_user:CrZOao77huJzpg2P@cluster0.5udi09y.mongodb.net/hospitaldb
+DB_CNN = mongodb+srv://mean_user:CrZOao77huJzpg2P@cluster0.5udi09y.mongodb.net/hospitaldb 
+JWT_SECRET = sjdfnlsdj@sdfbsjcblsahcb
