--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT = 3000
 DB_CNN = mongodb+srv://mean_user:CrZOao77huJzpg2P@cluster0.5udi09y.mongodb.net/hospitaldb 
 JWT_SECRET = sjdfnlsdj@sdfbsjcblsahcb
+
+# GOOGLE_ID = 290016735368-7uaf2svpsgpnk69pqqn08q09g8ruglb2.apps.googleusercontent.com
+GOOGLE_ID = 290016735368-1ogpugddnnucgvv9234d2espb0r0d122.apps.googleusercontent.com
+# GOOGLE_SECRET = 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
+GOOGLE_SECRET = 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
